<resources>
    <string name="app_name">Attendance management</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo" />
    <string name="check_it">CHECK IT</string>
    <string name="textSigUp">Registration</string>
    <string name="textSigIn">Login</string>
    <string name="textName">Full name</string>
    <string name="textPassword">Password</string>
    <string name="textEnterName">enter full name</string>
    <string name="textEnterLogin">enter login</string>
    <string name="textEnterPassword">enter password</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_faculty_name">Enter faculty name</string>
    <string name="name">Name</string>
    <string name="faculty">Faculties</string>
    <string name="add_faculty">Add faculty</string>
    <string name="ready">ready</string>
    <string name="add_avatar">Add avatar</string>
    <string name="add_group">Add group</string>
    <string name="add">Add</string>
    <string name="enter_group_name">add group name</string>
    <string name="about_application_info">About application</string>
    <string name="info_text">This application is designed to simplify the process of checking the attendance of students, students in schools, training centers and other institutions.</string>
    <string name="understand">Understand</string>
    <string name="language">Language</string>
    <string name="about_application">About application</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="confirm">confirm</string>
    <string name="add_student">Add student</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="update">update</string>
    <string name="remove">remove</string>
    <string name="_400_students">400 students</string>
    <string name="business">Business</string>
    <string name="edit_faculty">Edit faculty</string>
    <string name="edit_group">Edit group</string>
    <string name="a">Азизов Азиз</string>
    <string name="groups">Groups</string>
</resources>