<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:layout_constraintCircleRadius="16dp"
    android:background="@color/assetsColor"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textEditStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_group"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold|normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/inputGroupName"
        app:layout_constraintStart_toStartOf="@id/inputGroupName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputGroupName"
        style="@style/DefaultEditText"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_edit_text_click"
        android:hint="@string/enter_group_name"
        android:inputType="text"
        android:maxLength="20"
        android:padding="10dp"
        android:textColor="#000"
        android:textColorHint="#80736D6D"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEditStudent" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputGroupName"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/addAvatarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/add_avatar"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="@id/imageLogo"
        app:layout_constraintStart_toEndOf="@id/imageLogo"
        app:layout_constraintTop_toTopOf="@id/imageLogo" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:id="@+id/btAddGroupToDB"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/bg_click_button"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAvatarButton" />

</androidx.constraintlayout.widget.ConstraintLayout>