<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/assetsColor"
    app:layout_constraintCircleRadius="16dp">

    <TextView
        android:id="@+id/textEditStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_student"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold|normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/editLastName"
        app:layout_constraintStart_toStartOf="@id/editLastName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editFirstName"
        style="@style/DefaultEditText"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_edit_text_click"
        android:hint="@string/enter_first_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="20"
        android:padding="10dp"
        android:textColor="#000"
        android:textColorHint="#80736D6D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/editLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEditStudent" />

    <TextView
        android:id="@+id/textLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/editFirstName"
        app:layout_constraintStart_toStartOf="@id/editFirstName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editLastName"
        style="@style/DefaultEditText"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/bg_edit_text_click"
        android:hint="@string/enter_last_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="20"
        android:padding="10dp"
        android:textColor="#000"
        android:textColorHint="#80736D6D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/editStudentAvatarButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />


    <TextView
        android:id="@+id/editStudentAvatarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:drawablePadding="12dp"
        android:focusable="false"
        android:padding="16dp"
        android:text="@string/add_avatar"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_image"
        app:layout_constraintBottom_toTopOf="@id/btEditStudentToDB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editLastName" />

    <Button
        android:id="@+id/btEditStudentToDB"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/bg_click_button"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editStudentAvatarButton" />

</androidx.constraintlayout.widget.ConstraintLayout>