<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/assetsColor"
    android:paddingHorizontal="12dp"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/about_app_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_application"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/about_app_info_tex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:text="@string/info_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_app_text" />

    <Button
        android:id="@+id/btUnderstand"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_click_button"
        android:text="@string/understand"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/about_app_info_tex" />

</androidx.constraintlayout.widget.ConstraintLayout>