<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auth_page_background"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <LinearLayout
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:background="@drawable/bg_auth_logo"
                android:orientation="horizontal"
                android:paddingVertical="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:layout_constraintBottom_toTopOf="@id/inputLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_check_circle"
                    app:tint="@color/auth_page_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_it"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/textSigIn"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/inputLogin"
                app:layout_constraintStart_toStartOf="@id/inputLogin" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputLogin"
                style="@style/DefaultEditText"
                android:layout_width="0dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/bg_edit_text_click"
                android:hint="@string/textEnterLogin"
                android:inputType="text"
                android:maxLength="20"
                android:padding="10dp"
                android:textColor="#000"
                android:textColorHint="#80736D6D"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/inputPassword"
                app:layout_constraintEnd_toEndOf="@id/line2"
                app:layout_constraintStart_toStartOf="@id/line1"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/textPassword"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/inputPassword"
                app:layout_constraintStart_toStartOf="@id/inputPassword" />

            <EditText
                android:id="@+id/inputPassword"
                style="@style/DefaultEditText"
                android:layout_width="0dp"
                android:layout_marginTop="44dp"
                android:autofillHints=""
                android:background="@drawable/bg_edit_text_click"
                android:hint="@string/textEnterPassword"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#000"
                android:textColorHint="#80736D6D"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/line2"
                app:layout_constraintStart_toStartOf="@id/line1"
                app:layout_constraintTop_toBottomOf="@+id/inputLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btSignUp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_click_button"
            android:elevation="16dp"
            android:foreground="?android:selectableItemBackground"
            android:text="@string/textSigUp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btSignIn"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_click_button1"
            android:elevation="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/textSigIn"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</FrameLayout>

