<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:elevation="4dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clickLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/assetsColorDark"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackgroundBorderless">

        <ImageView
            android:id="@+id/image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginVertical="12dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintCircleRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toStartOf="@id/morePopup"
            android:text="@string/business"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/studentCount"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/studentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/_400_students"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <ImageButton
            android:id="@+id/morePopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/todo"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_more_vert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>