<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/assetsColor"
    app:layout_constraintCircleRadius="16dp">

    <TextView
        android:id="@+id/textEditFaculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Add faculty"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold|normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/editFacultyName"
        app:layout_constraintStart_toStartOf="@id/editFacultyName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editFacultyName"
        style="@style/DefaultEditText"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_edit_text_click"
        android:hint="@string/enter_faculty_name"
        android:inputType="text"
        android:maxLength="20"
        android:padding="10dp"
        android:textColor="#000"
        android:textColorHint="#80736D6D"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEditFaculty" />

    <TextView
        android:id="@+id/editFacultyAvatarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="false"
        android:drawablePadding="16dp"
        android:focusable="false"
        android:padding="16dp"
        android:text="@string/add_avatar"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_image"
        app:layout_constraintBottom_toTopOf="@id/btUpdateFaculty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editFacultyName" />

    <Button
        android:id="@+id/btUpdateFaculty"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/bg_click_button"
        android:text="Add"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAvatarButton" />

</androidx.constraintlayout.widget.ConstraintLayout>